--- a/connect.a.vallet.html
+++ b/connect.a.vallet.html
@@ -50,8 +50,8 @@
                 </div>
                 <div class="box-1-row-col box-1-row-col-2">
                     <div class="box-1-row-col-h1">
-                        <h1>Create Account</h1>
-                        <p>Welcome! enter your details and start creating, collecting and selling NFTs.</p>
+                        <h1>Connect wallet</h1>
+                        <p>Choose a wallet you want to connect. There are several wallet providers.</p>
                     </div>
                     <div class="box-1-row-col-inputs-row">
                         <div class="metamask">
