--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div class="nav-pc">
-            <a href="index.html"  rel="noopener noreferrer">
+            <a href="index.html" rel="noopener noreferrer">
                 <div class="logo-pc">
                     <img src="images/logologo.png" alt="logo">
                 </div>
@@ -26,28 +26,26 @@
             <div class="desktop-menu">
                 <li>Marketplace</li>
                 <li>Rankings</li>
-                <a href="connect.a.vallet.html"  rel="noopener noreferrer">
-                <li>Connect a wallet</li>
+                <a href="connect.a.vallet.html" rel="noopener noreferrer">
+                    <li>Connect a wallet</li>
                 </a>
-                <a href="sign-in.html"  rel="noopener noreferrer"><button class="btn-sign-up">Sign
+                <a href="sign-in.html" rel="noopener noreferrer"><button class="btn-sign-up">Sign
                         Up</button></a>
             </div>
         </div>
 
-        <div class="container">
-            <nav>
-                <a href="sign-in.html"  rel="noopener noreferrer">
-                    <div class="logo">
-                        <img src="images/logologo.png" alt="logo">
-                    </div>
-                </a>
-
-                <div class="mobile-menu">
-                    <img src="images/icons/Burger Menumenu.bar.svg" alt="Menu">
+        <nav>
+            <a href="index.html" rel="noopener noreferrer">
+                <div class="logo">
+                    <img src="images/logologo.png" alt="logo">
                 </div>
+            </a>
 
-            </nav>
-        </div>
+            <div class="mobile-menu">
+                <img src="images/icons/Burger Menumenu.bar.svg" alt="Menu">
+            </div>
+
+        </nav>
     </header>
     <main>
         <div class="container">
@@ -58,7 +56,7 @@
                         <p>NFT marketplace UI created with Anima for Figma. Collect, buy and sell art from more than 20k
                             NFT
                             artists.</p>
-                    </section> <a href="sign-in.html"  rel="noopener noreferrer">
+                    </section> <a href="sign-in.html" rel="noopener noreferrer">
                         <div class="btn">
                             <img src="images/icons/RocketLaunchrocekt-icon.png">
                             <span>Get Started</span>
@@ -80,15 +78,17 @@
 
                     </div>
                 </div>
-                <div class="intro-card tablets">
-                    <img src="images/Image Placeholder.png">
-                    <h2>Space Walking</h2>
-                    <div class="user-id">
-                        <div class="user-id-img-1">
+                <a href="artist.page.html">
+                    <div class="intro-card tablets">
+                        <img src="images/Image Placeholder.png">
+                        <h2>Space Walking</h2>
+                        <div class="user-id">
+                            <div class="user-id-img-1">
+                            </div>
+                            <span>Animakid</span>
                         </div>
-                        <span>Animakid</span>
                     </div>
-                </div>
+                </a>
                 <!-- FOR Mobile -->
                 <div class="for-mobile">
                     <div class="mobile-box-1-col-1">
@@ -99,20 +99,22 @@
                                 NFT
                                 artists.</p>
                         </section>
-                        <div class="intro-card">
-                            <img src="images/Image Placeholder.png">
-                            <h2>Space Walking</h2>
-                            <div class="user-id">
-                                <div class="user-id-img-1">
-                                </div>
-                                <span>Animakid</span>
-                            </div>
-                        </div><a href="sign-in.html"  rel="noopener noreferrer"></a>
-                        <div class="btn">
+                        <a href="artist.page.html">
 
+                            <div class="intro-card">
+                                <img src="images/Image Placeholder.png">
+                                <h2>Space Walking</h2>
+                                <div class="user-id">
+                                    <div class="user-id-img-1">
+                                    </div>
+                                    <span>Animakid</span>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="sign-in.html" rel="noopener noreferrer">
+                        <div class="btn">
                             <img src="images/icons/RocketLaunchrocekt-icon.png">
                             <span>Get Started</span>
-
                         </div></a>
                         <div class="subs-text-wrap">
                             <div class="subs-text-col">
@@ -1001,7 +1003,7 @@
         <div class="container">
             <div class="footer">
                 <div class="fcol1">
-                    <a href="index.html"  rel="noopener noreferrer">
+                    <a href="index.html" rel="noopener noreferrer">
                         <img src="images/logologo.png">
 
                     </a>
