--- a/connect.a.vallet.html
+++ b/connect.a.vallet.html
@@ -60,11 +60,11 @@
                         </div>
                         <div class="metamask">
                             <img src="images/icons/WalletConnect.png">
-                            <span>Metamask</span>
+                            <span>Wallet Connect</span>
                         </div>
                         <div class="metamask">
                             <img src="images/icons/Coinbase.png">
-                            <span>Metamask</span>
+                            <span>Coinbase</span>
                         </div>
                     </div>
                 </div>
