--- a/artist.page.html
+++ b/artist.page.html
@@ -33,9 +33,11 @@
         </div>
         <div class="container">
             <nav>
-                <div class="logo">
-                    <img src="images/logologo.png" alt="logo">
-                </div>
+                <a href="index.html">
+                    <div class="logo">
+                        <img src="images/logologo.png" alt="logo">
+                    </div>
+                </a>
                 <div class="mobile-menu">
                     <img src="images/icons/Burger Menumenu.bar.svg" alt="Menu">
                 </div>
@@ -584,42 +586,42 @@
     </main>
 
     <footer>
-            <div class="footer">
-                <div class="fcol1">
-                    <a href="index.html" rel="noopener noreferrer">
-                        <img src="images/logologo.png">
-                    </a>
-                    <p>NFT marketplace UI created with Anima for Figma.</p>
-                    <p>Join our community</p>
-                    <div class="social">
-                        <img src="images/icons/DiscordLogodc.png">
-                        <img src="images/icons/YoutubeLogo.png">
-                        <img src="images/icons/TwitterLogo.png">
-                        <img src="images/icons/InstagramLogo.png">
-                    </div>
-                </div>
-                <div class="fcol2">
-                    <h2>Explore</h2>
-                    <div class="explore-col">
-                        <p>Marketplace</p>
-                        <p>Ranking</p>
-                        <p>Connect a wallet</p>
-                    </div>
-                </div>
-                <div class="fcol3">
-                    <h3>Join our weekly digest</h3>
-                    <p>Get exclusive promotions & updates straight to your inbox.</p>
-                    <div class="footer-input-col">
-                        <input id="email-btn" type="email" placeholder="Enter Your Email Adress">
-                        <button class="f-btn">
-                            <img src="images/icons/EnvelopeSimplemail.png">
-                            <span>Subscribe</span>
-                        </button>
-                    </div>
+        <div class="footer">
+            <div class="fcol1">
+                <a href="index.html" rel="noopener noreferrer">
+                    <img src="images/logologo.png">
+                </a>
+                <p>NFT marketplace UI created with Anima for Figma.</p>
+                <p>Join our community</p>
+                <div class="social">
+                    <img src="images/icons/DiscordLogodc.png">
+                    <img src="images/icons/YoutubeLogo.png">
+                    <img src="images/icons/TwitterLogo.png">
+                    <img src="images/icons/InstagramLogo.png">
                 </div>
             </div>
-            <div id="copy">Ⓒ Made By <a href="https://github.com/zodwo" target="_blank">ZODWO</a> - NFT Market. Use
-                this template freely. </div>
+            <div class="fcol2">
+                <h2>Explore</h2>
+                <div class="explore-col">
+                    <p>Marketplace</p>
+                    <p>Ranking</p>
+                    <p>Connect a wallet</p>
+                </div>
+            </div>
+            <div class="fcol3">
+                <h3>Join our weekly digest</h3>
+                <p>Get exclusive promotions & updates straight to your inbox.</p>
+                <div class="footer-input-col">
+                    <input id="email-btn" type="email" placeholder="Enter Your Email Adress">
+                    <button class="f-btn">
+                        <img src="images/icons/EnvelopeSimplemail.png">
+                        <span>Subscribe</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div id="copy">Ⓒ Made By <a href="https://github.com/zodwo" target="_blank">ZODWO</a> - NFT Market. Use
+            this template freely. </div>
     </footer>
 </body>
 
