--- a/connect.a.vallet.html
+++ b/connect.a.vallet.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="nav-pc">
-            <a href="index.html"  rel="noopener noreferrer">
+            <a href="index.html" rel="noopener noreferrer">
                 <div class="logo-pc">
                     <img src="images/logologo.png" alt="logo">
                 </div>
@@ -22,19 +22,21 @@
             <div class="desktop-menu">
                 <li>Marketplace</li>
                 <li>Rankings</li>
-                <a href="connect.a.vallet.html"  rel="noopener noreferrer">
+                <a href="connect.a.vallet.html" rel="noopener noreferrer">
                     <li class="active">Connect a wallet</li>
-                    </a>
-                    <a href="sign-in.html">
-                        <button class="btn-sign-up">Sign Up</button>
-                    </a>
+                </a>
+                <a href="sign-in.html">
+                    <button class="btn-sign-up">Sign Up</button>
+                </a>
             </div>
         </div>
         <div class="container">
             <nav>
-                <div class="logo">
-                    <img src="images/logologo.png" alt="logo">
-                </div>
+                <a href="index.html">
+                    <div class="logo">
+                        <img src="images/logologo.png" alt="logo">
+                    </div>
+                </a>
                 <div class="mobile-menu">
                     <img src="images/icons/Burger Menumenu.bar.svg" alt="Menu">
                 </div>
@@ -78,7 +80,7 @@
         <div class="container">
             <div class="footer">
                 <div class="fcol1">
-                    <a href="index.html"  rel="noopener noreferrer">
+                    <a href="index.html" rel="noopener noreferrer">
                         <img src="images/logologo.png">
                     </a>
                     <p>NFT marketplace UI created with Anima for Figma.</p>
