--- a/index.html
+++ b/index.html
@@ -35,12 +35,11 @@
         </div>
 
         <nav>
-            <a href="index.html" rel="noopener noreferrer">
+            <a href="index.html">
                 <div class="logo">
                     <img src="images/logologo.png" alt="logo">
                 </div>
             </a>
-
             <div class="mobile-menu">
                 <img src="images/icons/Burger Menumenu.bar.svg" alt="Menu">
             </div>
@@ -112,10 +111,11 @@
                             </div>
                         </a>
                         <a href="sign-in.html" rel="noopener noreferrer">
-                        <div class="btn">
-                            <img src="images/icons/RocketLaunchrocekt-icon.png">
-                            <span>Get Started</span>
-                        </div></a>
+                            <div class="btn">
+                                <img src="images/icons/RocketLaunchrocekt-icon.png">
+                                <span>Get Started</span>
+                            </div>
+                        </a>
                         <div class="subs-text-wrap">
                             <div class="subs-text-col">
                                 <h2>240k+</h2>
