--- a/connect.a.vallet.html
+++ b/connect.a.vallet.html
@@ -13,6 +13,7 @@
 <body>
     <header>
         <div class="nav-pc">
+            <!--! Logo -->
             <a href="index.html" rel="noopener noreferrer">
                 <div class="logo-pc">
                     <img src="images/logologo.png" alt="logo">
@@ -20,9 +21,11 @@
             </a>
 
             <div class="desktop-menu">
-                <li>Marketplace</li>
+                <a href="marketplace.html">
+                    <li>Marketplace</li>
+                </a>
                 <li>Rankings</li>
-                <a href="connect.a.vallet.html" rel="noopener noreferrer">
+                <a href="connect.a.vallet.html">
                     <li class="active">Connect a wallet</li>
                 </a>
                 <a href="sign-in.html">
