--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             </a>
 
             <div class="desktop-menu">
-                <li>Marketplace</li>
+                <a href="marketplace.html">
+                <li>Marketplace</li></a>
                 <li>Rankings</li>
                 <a href="connect.a.vallet.html" rel="noopener noreferrer">
                     <li>Connect a wallet</li>
@@ -55,7 +56,8 @@
                         <p>NFT marketplace UI created with Anima for Figma. Collect, buy and sell art from more than 20k
                             NFT
                             artists.</p>
-                    </section> <a href="sign-in.html" rel="noopener noreferrer">
+                    </section>
+                    <a href="artist.page.html">
                         <div class="btn">
                             <img src="images/icons/RocketLaunchrocekt-icon.png">
                             <span>Get Started</span>
@@ -110,7 +112,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="sign-in.html" rel="noopener noreferrer">
+                        <a href="sign-in.html">
                             <div class="btn">
                                 <img src="images/icons/RocketLaunchrocekt-icon.png">
                                 <span>Get Started</span>
@@ -143,66 +145,98 @@
                 <div class="intro-card-wrapper">
                     <div class="intro-card-2">
                         <div class="sablon-img">
-                            <img src="images/Primary Photo Placeholder.png">
+                            <a href="the-orbit.html">
+                                <img src="images/Primary Photo Placeholder.png">
+                            </a>
                         </div>
                         <div class="intro-card-list">
-                            <div class="wrap1">
-                                <img src="images/Secondary Photo Placeholder.png">
-                            </div>
-                            <div class="wrap2">
-                                <img src="images/Secondary Photo Placeholder_1.png">
-                            </div>
-                            <button class="btn1"><span>1025+</span></button>
+                            <a href="the-orbit.html">
+                                <div class="wrap1">
+                                    <img src="images/Secondary Photo Placeholder.png">
+                                </div>
+                            </a>
+                            <a href="the-orbit.html">
+                                <div class="wrap2">
+                                    <img src="images/Secondary Photo Placeholder_1.png">
+                                </div>
+                            </a>
+                            <a href="the-orbit.html">
+                                <button class="btn1"><span>1025+</span></button>
+                            </a>
                         </div>
                         <div class="intro-card-text">
                             <h2>DSGN Animals</h2>
-                            <div class="intro-card-text-list">
-                                <div class="img-2"></div>
-                                <span>MrFox</span>
-                            </div>
+                            <a href="artist.page.html">
+                                <div class="intro-card-text-list">
+                                    <div class="img-2"></div>
+                                    <span>MrFox</span>
+                                </div>
+                            </a>
                         </div>
                     </div>
                     <div class="intro-card-2 tablets">
                         <div class="sablon-img">
-                            <img src="images/NFTHighlight_2.png">
+                            <a href="the-orbit.html">
+                                <img src="images/NFTHighlight_2.png">
+                            </a>
                         </div>
                         <div class="intro-card-list">
-                            <div class="wrap1">
-                                <img src="images/Secondary Photo Placeholder_2.png">
-                            </div>
-                            <div class="wrap2">
-                                <img src="images/Secondary Photo Placeholder_3.png">
-                            </div>
-                            <button class="btn1"><span>1525+</span></button>
+                            <a href="the-orbit.html">
+                                <div class="wrap1">
+                                    <img src="images/Secondary Photo Placeholder_2.png">
+                                </div>
+                            </a>
+
+                            <a href="the-orbit.html">
+                                <div class="wrap2">
+                                    <img src="images/Secondary Photo Placeholder_3.png">
+                                </div>
+                            </a>
+                            <a href="the-orbit.html">
+                                <button class="btn1"><span>1525+</span></button>
+                            </a>
                         </div>
                         <div class="intro-card-text">
                             <h2>Magic Mashrooms</h2>
-                            <div class="intro-card-text-list">
-                                <div class="img-3"></div>
-                                <span>Shroomie</span>
-                            </div>
+                            <a href="artist.page.html">
+                                <div class="intro-card-text-list">
+                                    <div class="img-3"></div>
+                                    <span>Shroomie</span>
+                                </div>
+                            </a>
                         </div>
                     </div>
                     <!-- ! FOR DEKSTOP -->
                     <div class="intro-card-2 desktop">
-                        <div class="sablon-img">
-                            <img src="images/Primary Photo Placeholder_2.png">
-                        </div>
+                        <a href="the-orbit.html">
+                            <div class="sablon-img">
+                                <img src="images/Primary Photo Placeholder_2.png">
+                            </div>
+                        </a>
+
                         <div class="intro-card-list">
-                            <div class="wrap1">
-                                <img src="images/Secondary Photo Placeholder_4.png">
-                            </div>
-                            <div class="wrap2">
-                                <img src="images/Secondary Photo Placeholder_5.png">
-                            </div>
-                            <button class="btn1"><span>1525+</span></button>
+                            <a href="the-orbit.html">
+                                <div class="wrap1">
+                                    <img src="images/Secondary Photo Placeholder_4.png">
+                                </div>
+                            </a>
+                            <a href="the-orbit.html">
+                                <div class="wrap2">
+                                    <img src="images/Secondary Photo Placeholder_5.png">
+                                </div>
+                            </a>
+                            <a href="the-orbit.html">
+                                <button class="btn1"><span>1525+</span></button>
+                            </a>
                         </div>
                         <div class="intro-card-text">
                             <h2>Disco Machines</h2>
-                            <div class="intro-card-text-list">
-                                <div class="img-3"></div>
-                                <span>BeKind2Robots</span>
-                            </div>
+                            <a href="the-orbit.html">
+                                <div class="intro-card-text-list">
+                                    <div class="img-3"></div>
+                                    <span>BeKind2Robots</span>
+                                </div>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -713,10 +747,13 @@
                         </div>
                     </div>
                 </div>
-                <button class="btn4 for-mobile">
-                    <img src="images/icons/Eyeeyes.png" alt="">
-                    See All
-                </button>
+                <a href="the-orbit.html">
+                    <button class="btn4 for-mobile">
+                        <img src="images/icons/Eyeeyes.png" alt="">
+                        See All
+                    </button>
+                </a>
+
                 <!-- ! TABLETS -->
                 <div class="box-5 tablets">
                     <div class="box-5-start-container">
@@ -724,10 +761,13 @@
                             <h2>Discover More NFTs</h2>
                             <p>Explore new trending NFTs</p>
                         </section>
-                        <button class="btn4">
-                            <img src="images/icons/Eyeeyes.png" alt="">
-                            See All
-                        </button>
+                        <a href="the-orbit.html">
+                            <button class="btn4">
+                                <img src="images/icons/Eyeeyes.png" alt="">
+                                See All
+                            </button>
+                        </a>
+
                     </div>
                     <div class="box-5-card-container">
                         <div class="card card-1">
@@ -780,72 +820,81 @@
                             <h2>Discover More NFTs</h2>
                             <p>Explore new trending NFTs</p>
                         </section>
-                        <button class="btn4">
-                            <img src="images/icons/Eyeeyes.png" alt="">
-                            See All
-                        </button>
+                        <a href="the-orbit.html">
+                            <button class="btn4">
+                                <img src="images/icons/Eyeeyes.png" alt="">
+                                See All
+                            </button>
+                        </a>
                     </div>
                     <div class="box-5-card-container">
                         <div class="card card-1">
-                            <img src="images/Image Placeholder_9.png">
-                            <div class="user-card-id">
-                                <h2>Distant Galaxy</h2>
-                                <div class="user-id-wrapper">
-                                    <div class="user-id-img-2">
+                            <a href="the-orbit.html">
+                                <img src="images/Image Placeholder_9.png">
+                                <div class="user-card-id">
+                                    <h2>Distant Galaxy</h2>
+                                    <div class="user-id-wrapper">
+                                        <div class="user-id-img-2">
+                                        </div>
+                                        <span>MoonDancer</span>
                                     </div>
-                                    <span>MoonDancer</span>
+                                    <div class="user-sell-text-wrapper">
+                                        <div class="ustw-col">
+                                            <span>Price</span>
+                                            <span>1.63 ETH</span>
+                                        </div>
+                                        <div class="ustw-col ustw-col2">
+                                            <span>Height Bid</span>
+                                            <span>0.33 ETH</span>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="user-sell-text-wrapper">
-                                    <div class="ustw-col">
-                                        <span>Price</span>
-                                        <span>1.63 ETH</span>
+                            </a>
+                        </div>
+
+                        <div class="card card-1">
+                            <a href="the-orbit.html">
+                                <img src="images/ImagePlaceholder_10.png">
+                                <div class="user-card-id">
+                                    <h2>Life On Edena</h2>
+                                    <div class="user-id-wrapper">
+                                        <div class="user-id-img-3"></div>
+                                        <span>NebulaKid</span>
                                     </div>
-                                    <div class="ustw-col ustw-col2">
-                                        <span>Height Bid</span>
-                                        <span>0.33 ETH</span>
+                                    <div class="user-sell-text-wrapper">
+                                        <div class="ustw-col">
+                                            <span>Price</span>
+                                            <span>1.63 ETH</span>
+                                        </div>
+                                        <div class="ustw-col ustw-col2">
+                                            <span>Height Bid</span>
+                                            <span>0.33 ETH</span>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                         <div class="card card-1">
-                            <img src="images/ImagePlaceholder_10.png">
-                            <div class="user-card-id">
-                                <h2>Life On Edena</h2>
-                                <div class="user-id-wrapper">
-                                    <div class="user-id-img-3"></div>
-                                    <span>NebulaKid</span>
-                                </div>
-                                <div class="user-sell-text-wrapper">
-                                    <div class="ustw-col">
-                                        <span>Price</span>
-                                        <span>1.63 ETH</span>
+                            <a href="the-orbit.html">
+                                <img src="images/ImagePlaceholder_11.png">
+                                <div class="user-card-id">
+                                    <h2>AstroFisction</h2>
+                                    <div class="user-id-wrapper">
+                                        <div class="user-id-img-3"></div>
+                                        <span>NebulaKid</span>
                                     </div>
-                                    <div class="ustw-col ustw-col2">
-                                        <span>Height Bid</span>
-                                        <span>0.33 ETH</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card card-1">
-                            <img src="images/ImagePlaceholder_11.png">
-                            <div class="user-card-id">
-                                <h2>AstroFisction</h2>
-                                <div class="user-id-wrapper">
-                                    <div class="user-id-img-3"></div>
-                                    <span>NebulaKid</span>
-                                </div>
-                                <div class="user-sell-text-wrapper">
-                                    <div class="ustw-col">
-                                        <span>Price</span>
-                                        <span>1.63 ETH</span>
-                                    </div>
-                                    <div class="ustw-col ustw-col2">
-                                        <span>Height Bid</span>
-                                        <span>0.33 ETH</span>
+                                    <div class="user-sell-text-wrapper">
+                                        <div class="ustw-col">
+                                            <span>Price</span>
+                                            <span>1.63 ETH</span>
+                                        </div>
+                                        <div class="ustw-col ustw-col2">
+                                            <span>Height Bid</span>
+                                            <span>0.33 ETH</span>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                     </div>
 
@@ -856,8 +905,10 @@
                     <!-- FOR MOBILE -->
                     <div class="box-6-text-wrapper for-mobile">
                         <div class="box-6-user">
-                            <div class="user-image"></div>
-                            <span>Shroomie</span>
+                            <a href="artist.page.html">
+                                <div class="user-image"></div>
+                                <span>Shroomie</span>
+                            </a>
                         </div>
                         <h3>Magic Mashrooms</h3>
                         <div class="timer-wrap">
@@ -879,10 +930,12 @@
                                 </div>
                             </div>
                         </div>
-                        <button class="btn5">
-                            <img src="images/icons/Eyeeyes.png" alt="">
-                            See NFT
-                        </button>
+                        <a href="the-orbit.html">
+                            <button class="btn5">
+                                <img src="images/icons/Eyeeyes.png" alt="">
+                                See NFT
+                            </button>
+                        </a>
                     </div>
                     <!-- ! TABLETS -->
                     <div class="box-6-text-wrap tablets">
@@ -892,10 +945,11 @@
                                 <span>Shroomie</span>
                             </div>
                             <h3>Magic Mashrooms</h3>
-                            <button class="btn5">
-                                <img src="images/icons/Eyeeyes.png" alt="">
-                                See NFT
-                            </button>
+                            <a href="the-orbit.html">
+                                <button class="btn5">
+                                    <img src="images/icons/Eyeeyes.png" alt="">
+                                    See NFT
+                                </button></a>
                         </div>
                         <div class="timer-wrap">
                             <span>Auction ends in:</span>
