--- a/sign-in.html
+++ b/sign-in.html
@@ -20,27 +20,30 @@
             </a>
 
             <div class="desktop-menu">
-                <li>Marketplace</li>
+                <a href="marketplace.html">
+                    <li>Marketplace</li>
+                </a>
                 <li>Rankings</li>
                 <a href="connect.a.vallet.html" rel="noopener noreferrer">
                     <li>Connect a wallet</li>
                 </a>
-                <button class="btn-sign-up active">Sign Up</button>
+                <a href="sign-in.html">
+                    <button class="btn-sign-up active">SignUp</button>
+                </a>
             </div>
         </div>
-        <div class="container">
-            <nav>
-                <a href="index.html">
-                    <div class="logo">
-                        <img src="images/logologo.png" alt="logo">
-                    </div>
-                </a>
-                <div class="mobile-menu">
-                    <img src="images/icons/Burger Menumenu.bar.svg" alt="Menu">
-                </div>
 
-            </nav>
-        </div>
+        <nav>
+            <a href="index.html">
+                <div class="logo">
+                    <img src="images/logologo.png" alt="logo">
+                </div>
+            </a>
+            <div class="mobile-menu">
+                <img src="images/icons/Burger Menumenu.bar.svg" alt="Menu">
+            </div>
+
+        </nav>
     </header>
     <main>
         <div class="wrapper">
